Align help icon and small style fixes

--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,21 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
 }
 
 html {
   background: #f3f3f3;
   font-family: 'Roboto', sans-serif;
+}
+
+h1 {
+    font-size: 24px;
+    font-weight: 300;
+    letter-spacing: 1.2px;
+    color: rgba(0, 0, 0, 0.87);
+    display: flex;
+    align-items: center;
+    height: 48px;
 }
 
 /* D2-UI sidebar overrides */
